[package]
name    = "secp256k1-ecdsa-bench"
version = "0.1.0"
authors = ["Tony Arcieri <tony@iqlusion.io>"]
edition = "2018"
publish = false
readme  = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
k256 = { version = "0.5", features = ["ecdsa", "sha256"] }
libsecp256k1 = { version = "0.3", package = "libsecp256k1" }
rust_secp256k1 = { version = "0.19", package = "secp256k1", features = ["endomorphism"] }
sha2 = "0.9"

[dev-dependencies]
criterion = "0.3"
criterion-cycles-per-byte = "0.1"

[[bench]]
name = "k256"
harness = false

[[bench]]
name = "libsecp256k1"
harness = false

[[bench]]
name = "rust_secp256k1"
harness = false
